fix: fix content overflow

--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -8,6 +8,10 @@
     font-weight: 500;
     font-size: 42px;
     line-height: 1.14;
+    /* text-overflow */
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 767px) {
